--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "packaging:prepare": "docker-packaging/prepare.sh",
     "packaging:image-build": "docker-packaging/image-build.sh",
     "packaging:service-deploy": "docker-packaging/service-deploy.sh",
-    "packaging:container-run": "docker-packaging/container-run.sh",
+    "packaging:service-run": "docker-packaging/service-run.sh",
 
     "run:dev": "NODE_ENV=dev nodemon --watch src src/app.js",
     "lint": "eslint src/*.js && eslint src/**/*.js && eslint test/**/*.js ",
