Swarm: deploy to all nodes

--- a/docker-packaging-config/docker-compose-swarm.yml
+++ b/docker-packaging-config/docker-compose-swarm.yml
@@ -16,6 +16,8 @@ services:
     restart: always
     environment:
       - "constraint:webproxy==true"
+    deploy:
+      mode: global
 
 networks:
   webproxy-network:
