Switch to global deployment mode

--- a/docker-packaging-config/docker-compose-swarm.yml
+++ b/docker-packaging-config/docker-compose-swarm.yml
@@ -13,6 +13,8 @@ services:
       - /opt/data/certificates:/opt/data/certificates
     networks:
       - webproxy-network
+    deploy:
+      mode: global
 
 networks:
   webproxy-network:
