--- a/docker-packaging-config/docker-compose.yml
+++ b/docker-packaging-config/docker-compose.yml
@@ -12,7 +12,9 @@ services:
     volumes:
       - /opt/data/certificates:/opt/data/certificates
     networks:
-      - webproxy-network
+      webproxy-network:
+        aliases:
+          - webproxy-proxy
 
   watcher:
     build:
@@ -21,7 +23,9 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
-      - webproxy-network
+      webproxy-network:
+        aliases:
+          - webproxy-watcher
 
 networks:
   webproxy-network:
