Fix: Better handling of services and letsencrypt

--- a/src-proxy/config/config-default.json
+++ b/src-proxy/config/config-default.json
@@ -1,8 +1,11 @@
 {
   "nginx": {
     "configDir": "/etc/nginx/conf.d",
-    "reloadCommand": "/usr/sbin/nginx -s reload",
-    "wellKnownDir": "/opt/data/well-known",
+    "reloadCommand": "/usr/sbin/nginx -s reload"
+  },
+  "letsencrypt": {
+    "renewCommand": "/opt/certificates-renew.sh",
+    "certbotRoot": "/opt/data/certbot-root/",
     "letsencryptDir": "/etc/letsencrypt"
   }
 }
