--- a/package.json
+++ b/package.json
@@ -23,37 +23,37 @@
     "test:watch": "NODE_ENV=dev jest --watch --coverage"
   },
   "dependencies": {
-    "body-parser": "^1.17.2",
-    "concurrently": "^3.5.0",
-    "dockerode": "^2.5.0",
-    "express": "^4.15.3",
-    "fs-extra": "^6.0.0",
+    "body-parser": "^1.18.3",
+    "concurrently": "^3.6.0",
+    "dockerode": "^2.5.5",
+    "express": "^4.16.3",
+    "fs-extra": "^6.0.1",
     "lodash": "^4.17.10",
     "node-docker-monitor": "^1.0.10",
-    "request": "^2.81.0",
-    "winston": "^2.4.2"
+    "request": "^2.87.0",
+    "winston": "^3.0.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
-    "@types/chai": "^4.1.3",
-    "@types/express": "^4.11.1",
-    "@types/fs-extra": "^5.0.2",
-    "@types/jest": "^22.2.3",
-    "@types/lodash": "^4.14.108",
-    "@types/node": "^10.0.4",
-    "@types/request": "^2.47.0",
-    "@types/sinon": "^4.1.3",
-    "chai": "^4.0.2",
-    "concurrently": "^3.5.1",
-    "eslint": "^4.18.2",
-    "jest": "^22.4.2",
-    "nodemon": "^1.17.4",
+    "@types/chai": "^4.1.4",
+    "@types/express": "^4.16.0",
+    "@types/fs-extra": "^5.0.3",
+    "@types/jest": "^23.1.3",
+    "@types/lodash": "^4.14.110",
+    "@types/node": "^10.5.1",
+    "@types/request": "^2.47.1",
+    "@types/sinon": "^5.0.1",
+    "chai": "^4.1.2",
+    "concurrently": "^3.6.0",
+    "eslint": "^5.0.1",
+    "jest": "^23.2.0",
+    "nodemon": "^1.17.5",
     "npm-watch": "^0.3.0",
-    "sinon": "^5.0.7",
-    "ts-jest": "^22.4.5",
-    "ts-node": "^6.0.3",
+    "sinon": "^6.0.1",
+    "ts-jest": "^23.0.0",
+    "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
-    "typescript": "^2.8.3"
+    "typescript": "^2.9.2"
   },
   "repository": {
     "type": "git",
@@ -61,8 +61,8 @@
   },
   "keywords": [],
   "author": "Didier Hoarau",
-  "license": "UNLICENSED",
-  "homepage": "",
+  "license": "MIT",
+  "homepage": "https://didierhoarau.com",
   "jest": {
     "moduleFileExtensions": [
       "ts",
